# afk-lucky

./: .gitignore  BA-Deepseek.md  BA-GPT5.md  BA-Grok.md  BA-PrivateGPT.md  BUTTON_MOBILE_FIRST_SUMMARY.md  DATABASE_SETUP.md  DEBUG_USER_MANAGEMENT.md  DEVELOPMENT_GUIDE.md  ENHANCED_UI_IMPLEMENTATION.md  EXPORT_USAGE_GUIDE.md  FINAL_CHANGES_SUMMARY.md  FIX_CORS_ISSUE.md  MOBILE_FIRST_UI_CONVERSION_SUMMARY.md  PACKAGE_STANDARDIZATION_SUMMARY.md  PAGINATION_FIX_SUMMARY.md  QUICK_START.md  README-LOGIN.md  README.md  RESPONSIVE_IMPLEMENTATION_SUMMARY.md  RESTART_INSTRUCTIONS.md  TAILWIND_CSS_MODULE_OPTIMIZATION.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_11_USER_STATUS_MANAGEMENT_SUMMARY.md  TASK_12_USER_ACTIVITY_TRACKING_SUMMARY.md  TASK_13_EXPORT_FUNCTIONALITY_SUMMARY.md  TASK_14_IMPORT_FUNCTIONALITY_SUMMARY.md  TASK_15_ERROR_HANDLING_SUMMARY.md  TASK_17_RESPONSIVE_DESIGN_SUMMARY.md  TASK_18_PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  TASK_19_COMPREHENSIVE_TESTING_SUMMARY.md  TASK_1_API_ENHANCEMENTS.md  TASK_1_IMPLEMENTATION_SUMMARY.md  TASK_20_ADMIN_INTEGRATION_SUMMARY.md  TASK_21_COMPREHENSIVE_TESTING_SUMMARY.md  TASK_22_STORYBOOK_STORIES_SUMMARY.md  TASK_23_E2E_INTEGRATION_TESTS_SUMMARY.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TEST_STATUS_SUMMARY.md  (+18 more)
aiapi/: ENHANCEMENTS.md  README.md  SETUP_GUIDE.md  pyproject.toml  quick_test.py  run.py  test_api.py  test_enhanced_api.py  test_tts.py  test_tts_file.py  tts_inference.py
aiapi/src/aiapi/: config.py  main.py  models.py
aiapi/src/aiapi/routers/: chat.py  itinerary.py  story.py  tts.py
(+523 files in other folders)
