[project]
name = "aiapi"
version = "0.1.0"
description = ""
authors = [
    {name = "cuongpm",email = "i.am.m.cuong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "openai (>=2.5.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "aiapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
